# fake

./: .travis.yml  CMakeLists.txt  README.md
src/: main.cpp  namegenerator.cpp  namegenerator.hpp  parseoptions.cpp  parseoptions.hpp  progresscounter.hpp
test/: CMakeLists.txt
test/src/: test_namegenerator.cpp
